--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "developsmith <designsuniverse@gmail.com> (http://developsmith.com/)",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "body-parser": "^1.15.2",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
